force-app/main/default/objects/Service_Packages__c/Service_Packages__c.object-meta.xml
<CustomObject>
    <label>Service Package</label>
    <nameField>
        <label>Service Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>