force-app/main/default/objects/Service_Packages__c/fields/DWH_PACKAGE_ID__c.field-meta.xml
<CustomField>
    <fullName>DWH_PACKAGE_ID__c</fullName>
    <externalId>true</externalId>
    <label>DWH PACKAGE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>