force-app/main/default/objects/Service_Packages__c/fields/DWHPackageId_Historical__c.field-meta.xml
<CustomField>
    <fullName>DWHPackageId_Historical__c</fullName>
    <description>Historical Package Id (due to Autoline Split)</description>
    <label>DWH PACKAGE ID (Historical)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>