force-app/main/default/objects/Service_Packages__c/fields/ITEM_EXPIRY_DATE__c.field-meta.xml
<CustomField>
    <fullName>ITEM_EXPIRY_DATE__c</fullName>
    <label>ITEM EXPIRY DATE</label>
    <type>Date</type>
</CustomField>