force-app/main/default/objects/Service_Packages__c/fields/PACKAGE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>PACKAGE_DESCRIPTION__c</fullName>
    <label>PACKAGE DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>