force-app/main/default/objects/Service_Packages__c/listViews/DWH_Service_Packages.listView-meta.xml
<ListView>
    <fullName>DWH_Service_Packages</fullName>
    <columns>NAME</columns>
    <columns>DWH_PACKAGE_ID__c</columns>
    <columns>PACKAGE_DESCRIPTION__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>DWH</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>6/27/2022 12:00 AM</value>
    </filters>
    <label>DWH Service Packages</label>
</ListView>